# shortcut

./: .travis.yml  Cargo.toml  README.md  README.tpl
benches/: bench.rs
src/: cmp.rs  idx.rs  lib.rs
