[package]
name = "shortcut"
version = "4.1.3"

description = "an indexed, queryable column-based storage system"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/shortcut"
homepage = "https://github.com/jonhoo/shortcut"
repository = "https://github.com/jonhoo/shortcut.git"

keywords = ["storage","indexing","query","database"]
categories = ["database-implementations", "data-structures"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/shortcut" }
maintenance = { status = "as-is" }

[dependencies]

[dev-dependencies]
docopt = "0.6"
time = "0.1"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
